recursion.lessons.recursion.tree.Tree.scala.error
Tree:18: error: ';' expected but ',' found.
Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée, tourner à droite de l'angle indiqué, faire un arbre à 3 étages, tourner à gauche de deux fois l'angle indiqué, faire un autre arbre à 3 étages, puis revenir à sa position initiale. N'oubliez pas de revenir à la position initiale !
                                      ^Tree:20: error: ';' expected but ',' found.
Si le tronc d'un arbre mesure length à l'étage N, il mesure shrink*length à l'étage N+1.
                                                ^Tree:22: error: ';' expected but ',' found.
Comme vous pouvez le voir, chaque étage de la récursion est représenté par une couleur distinctive. Pour cela, appelez la fonction current(step) en lui passant en paramètre l'étage actuel de la récursion. Elle se chargera de choisir la couleur adéquate. N'effacez pas vos couleurs quand vous retournez à votre position initiale.
                         ^