recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	
	
	if (steps==0) {
			return  } 
	
	else { 	avance(length); 
			droite(angle);
			
			}


}



Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée, tourner à droite de l'angle indiqué, faire un arbre à 3 étages, tourner à gauche de deux fois l'angle indiqué, faire un autre arbre à 3 étages, puis revenir à sa position initiale. N'oubliez pas de revenir à la position initiale !

Si le tronc d'un arbre mesure length à l'étage N, il mesure shrink*length à l'étage N+1.

Comme vous pouvez le voir, chaque étage de la récursion est représenté par une couleur distinctive. Pour cela, appelez la fonction current(step) en lui passant en paramètre l'étage actuel de la récursion. Elle se chargera de choisir la couleur adéquate. N'effacez pas vos couleurs quand vous retournez à votre position initiale.
